# SGS

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
.devcontainer/: Dockerfile.yml  devcontainer.json  docker-compose.yml
.github/workflows/: main.yml  zip.yml
SGS/: app.py  handler.py  requirements.txt  sgs.py
src/: sgs.py
tests/: test_handler.py  test_sgs.py
tests/unit/: test_handler.py
