[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SGS"
version = "0.0.1"
authors = [
    {name= "Fabio Kenji Motezuki", email= "fabio.kenji@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["suds"]

[tool.hatch.build.targets.wheel]
packages = [ "src" ]

[tool.pytest.ini_options]
pythonpath = "src"